# farm

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: ISSUE_TEMPLATE  settings.yml
src/: cli.yaml  lib.rs  schema.rs
src/error/: error.rs  mod.rs
src/model/: column.rs  mod.rs  table.rs  tables_and_columns.rs
