[package]
name = "farm"
version = "1.1.0"
authors = ["Daniel Mason"]
description = "Find And Replace in MySql"
license = "MIT"
repository = "https://github.com/apolitical/farm"
include = [
    'src/**/*',
    'Cargo.lock',
    'Cargo.toml',
    'CHANGELOG.md',
    'CODE_OF_CONDUCT.md',
    'CONTRIBUTING.md',
    'README.md',
    'LICENSE',
]

[dependencies]
clap = {version = "^2.27.0", features = ["yaml"]}
failure = "^0.1.3"
mysql = "^14.1.1"
r2d2 = "^0.8.0"
r2d2_mysql = "^9.0.0"
rayon = "^1.0.3"
